Ingress-controller/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata: 
  name: internallb
spec:
  ports:
  - port: 9000
    targetPort: 80
  selector:
    env: dev  
  type: LoadBalancer
